# docs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .markdownlint.yml  .pre-commit-config.yaml  .typos.toml  1-process_md.sh  2-process_html.sh  3-rename_images.sh  404.html  CHANGELOG.md  CNAME  CODEOWNERS  Dockerfile  LICENSE  LICENSE-MIT  README.md  REUSE.toml  _typos.toml  adrs.toml  compose.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  renovate.json5  requirements.txt  sitemap.xml  versions.Dockerfile  zizmor.yml
.devcontainer/: devcontainer.json
.github/: matcher-htmlproofer.json
.github/markdownlint/: .markdownlint-cli2.yaml
.github/workflows/: ci.yml  deploy.yml  main.yml
.gitlab/markdownlint/: .markdownlint-cli2.yaml
.gitlab/merge_request_templates/: Default.md
assets/javascripts/: bundle.13a4f30d.min.js  bundle.56ea9cef.min.js  bundle.60a45f97.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.e71a0d61.min.js  bundle.f13b1293.min.js  bundle.f1b6f286.min.js  bundle.f55a23d4.min.js
assets/stylesheets/: extra.css
changelog/: index.html
deploy/: index.html
deploy/diagrams/: deployment_diagram_pie.puml  deployment_diagram_user.puml
deploy/integration/: index.html
development/: index.html
development/architecture/: index.html
development/local-dev-setup/: index.html
development/setup/: index.html
diagrams/: example.puml
docs/: CNAME  architecture.md  auditing.md  best_practices.md  changelog.md  code_review.md  gen_adrs_nav.py  index.md  onboarding.md  playground.md  setup.md  software_versions.md  strangler_fig.md
docs/QA/: Basic Testing Checklist_Jan12.docx  Basic Testing Checklist_Jan12.md  Basic-Testing-Checklist.xlsx
docs/architecture/: migration.md  registration.md
docs/best_practices/: diagrams.md
docs/deploy/: index.md  (+1 more)
install/: index.html
overrides/: adr-summary.jinja
search/: search_index.json
structurizr/: workspace.dsl  workspace.json
user/: index.html
(+122 files in other folders)
