# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: MIT

[project]
name = "docs"
version = "0"
description = "Documentation site for Opal"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-glightbox==0.5.1",
    "mkdocs-htmlproofer-plugin==1.3.0",
    "mkdocs-material==9.6.20",
    "plantuml-markdown==3.11.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]
