# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: MIT

[project]
name = "docs"
version = "0"
description = "Documentation site for Opal"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-htmlproofer-plugin==1.4.1",
    "mkdocs-material==9.7.1",
    "plantuml-markdown==3.11.1",
]

[dependency-groups]
dev = [
    "prek==0.3.3",
]
