# SPDX-FileCopyrightText: Copyright (C) 2025 Opal Health Informatics Group at the Research Institute of the McGill University Health Centre <john.kildea@mcgill.ca>
#
# SPDX-License-Identifier: MIT

[project]
name = "docs"
version = "0"
description = "Documentation site for Opal"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-htmlproofer-plugin==1.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-macros-adr-summary==1.3.0",
    "mkdocs-material==9.7.5",
    "plantuml-markdown==3.11.1",
]

[dependency-groups]
dev = [
    "prek==0.3.6",
]
